--- a/views/partials/encabezado_login.hbs
+++ b/views/partials/encabezado_login.hbs
@@ -1,8 +1,8 @@
 <div style="display:flex; flex-direction: column; align-items: center;">
     
-    {{#if login}}
-    <h1>Bienvenido {{login}}</h1>
-    <img style="width:100px" src={{foto}}>
+    {{#if this.username}}
+    <h1>Bienvenido {{this.username}}</h1>
+    <img style="width:100px" src={{this.foto}}>
     <form  action="/login/logout">
         <button>LOGOUT</button>
     </form>
