--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -2,6 +2,7 @@
         <ul style=" list-style:none; display:flex ; flex-direction:row; justify-content:space-between; padding-inline:5% "> 
             <li><a style="color:white ;text-decoration:none" href="/api/inicio">Inicio</a></li>
             <li><a style="color:white ;text-decoration:none" href="/api/productos">Productos</a></li>
+            <li><a style="color:white ;text-decoration:none" href="/api/infouser">Usuario</a></li>
             <li><a style="color:white ;text-decoration:none" href="/api/carrito">Carrito</a></li>
         </ul>
     </nav>
